--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
