--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-hot-toast": "^2.4.1",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
